configs/gangway/04-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gangway
  namespace: gangway
  annotations:
    # kubernetes.io/tls-acme: "true"
    # certmanager.k8s.io/cluster-issuer: "letsencrypt-prod"
spec:
  # tls:
  # - secretName: gangway
  #   hosts:
  #   - gangway.${DNS_NAME}
  rules:
  - host: "gangway.example.com"
    http:
      paths:
      - backend:
          serviceName: gangwaysvc
          servicePort: http
